k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mars-rover-photos
  name: mars-rover-photos
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: mars-rover-photos
