k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mars-rover-photos
  name: mars-rover-photos
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: mars-rover-photos
    weight: 100
